[package]
name = "fpgrars"
version = "1.13.1"
authors = ["Leonardo Riether <leonardoalves8217@gmail.com>"]
edition = "2018"
description = "Fast Pretty Good RISC-V Assembly Rendering System"
license = "MIT"

[features]
show_ms = [] # show ms per frame in the window title
8-bit-display = [] # 8-bit color format for the bitmap display

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"
opt-level = 1

[profile.release]
panic = "abort"

[build-dependencies]
clap = "4.3"
version_check = "0.9"

[dependencies]
lazy_static = "1.4"
rand = "0.8"
pixel-canvas = "0.2.3"
glium = "0.31.0"
nom = "5.1.2"
byteorder = "1.4"
midir = "0.9"
parking_lot = "0.12"
hashbrown = "0.13.2"
thiserror = "1.0.40"
owo-colors = "3.5.0"

[dependencies.clap]
version = "4.3"
features = ["suggestions", "color", "wrap_help", "cargo", "derive"]

