[package]
name = "fpgrars"
version = "2.4.0"
authors = ["Leonardo Riether <leonardoalves8217@gmail.com>"]
edition = "2021"
description = "Fast Pretty Good RISC-V Assembly Rendering System"
license = "MIT"
exclude = ["site/", "tests/riscv-tests/"]
repository = "https://github.com/LeoRiether/FPGRARS/"

[lib]
bench = false

[[bin]]
name = "fpgrars"
path = "src/main.rs"
bench = false

[features]
show_ms = [] # show ms per frame in the window title
unb = [] # 8-bit color format for the bitmap display

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"
opt-level = 1

[profile.release]
panic = "abort"

[profile.release-lto]
inherits = "release"
lto = true

[build-dependencies]
clap = "4.3"
version_check = "0.9"

[dependencies]
lazy_static = "1.4"
rand = "0.8"
pixel-canvas = "0.2.3"
glium = "0.31.0"
byteorder = "1.4"
midir = "0.9"
parking_lot = "0.12"
hashbrown = "0.13.2"
thiserror = "1.0.40"
owo-colors = "3.5.0"
serde = { version = "1.0.171", features = ["derive"] }
toml = "0.7.6"
ahash = "0.8.11"

[dependencies.clap]
version = "4.5"
features = ["suggestions", "color", "wrap_help", "cargo", "derive"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "simulator"
harness = false

